--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -20,6 +20,11 @@
 // MEDIA QUERY MANAGER
 
 @mixin respond($breakpoint) {
+  @if $breakpoint == xs {
+    @media only screen and (max-width: 480px) {
+      @content;
+    } //480px
+  }
   @if $breakpoint == sm {
     @media only screen and (max-width: 767px) {
       @content;
